@@ -4,7 +4,8 @@ Aaron Campbell, Bob Beck, Markus Friedl, Niels Provos,
 Theo de Raadt, and Dug Song - Creators of OpenSSH
 
 Andrew Stribblehill <a.d.stribblehill@durham.ac.uk> - Bugfixes
-Andre Lucas <andre.lucas@dial.pipex.com> - build, login and many other fixes
+Andre Lucas <andre.lucas@dial.pipex.com> - new login code, many fixes
+Andrew McGill <andrewm@datrix.co.za> - SCO fixes
 Andy Sloane <andy@guildsoftware.com> - bugfixes
 Arkadiusz Miskiewicz <misiek@pld.org.pl> - IPv6 compat fixes
 Ben Taylor <bent@clark.net> - Solaris debugging and fixes
